syntax = "proto3";

option csharp_namespace = "EventService.Presentation.Grpc";

import "google/protobuf/timestamp.proto";

service EventManagerGrpcService {
  rpc CreateEvent(CreateEventRequest) returns (EventResponse);
  rpc UpdateEvent(UpdateEventRequest) returns (EventResponse);
  rpc GetAllEvents(GetAllEventsRequest) returns (stream EventResponse);
}

message GetAllEventsRequest {}

message CreateEventRequest {
  int64 organizer_id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  int64 category_id = 6;
  int64 venue_id = 7;
}

message UpdateEventRequest {
  int64 organizer_id = 1;
  int64 event_id = 2;
  string title = 3;
  string description = 4;
  google.protobuf.Timestamp start_date = 5;
  google.protobuf.Timestamp end_date = 6;
  int64 category_id = 7;
  int64 venue_id = 8;
}

message EventResponse {
  int64 id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  int64 category_id = 6;
  int64 venue_id = 7;
}